HT1/kubeless/service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: grpc-app
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
